Fixed vertical spacing between nodes

--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -240,7 +240,7 @@ body.header-left-right #header-right {
 .node, .biblio-entry {
   padding-top: .5em;
   padding-bottom: 0.938em;
-  margin-bottom: 1.875em;
+  margin-bottom: .9em;
   padding-left:0.188em;
   padding-right:0.188em;
   clear:both;
